fix: Исправлены замечания spotbugs